Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-weatherapp
spec:
  selector:
    matchLabels:
      app: golang-weatherapp
  template:
    metadata:
      labels:
        app: golang-weatherapp
    spec:
      containers:
      - name: golang-weatherapp
        image: quay.io/omidiyanto/golang-weatherapp:v1.0.11
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
