Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: golang-weatherapp
spec:
  selector:
    app: golang-weatherapp
  ports:
  - port: 5000
    targetPort: 5000
